src/test/ui/regions/regions-name-duplicated.rs
struct Foo<'a, 'a> { //~ ERROR lifetime name `'a` declared twice
    x: &'a isize
}

fn main() {}
